--- a/tasks/task_upgradeAcm.yaml
+++ b/tasks/task_upgradeAcm.yaml
@@ -22,6 +22,9 @@ spec:
           #!/bin/bash
           set -e
 
+          ERROR_STATUS_MESSAGE="Couldn't upgrade ACM"
+          echo $ERROR_STATUS_MESSAGE > failureStatus.yaml
+
           _LOGIN_CMD=$(cat login.sh)
           eval "$_LOGIN_CMD"
           oc project $(inputs.params.namespace)
@@ -44,6 +47,7 @@ spec:
 
           if [[ "$NEXT_MCE_SNAPSHOT" == "null" ]]; then
               echo "Could not find MCE version"
+              
               exit 1
           fi
 
@@ -99,6 +103,7 @@ spec:
               sleep 15;
               if [[ $_ATTEMPTS == 30 ]]; then
                   echo "Failed to install the MCH in allotted time"
+                  
                   exit 1
               fi
           done
@@ -113,6 +118,7 @@ spec:
               sleep 15;
               if [[ $_ATTEMPTS == 30 ]]; then
                   echo "Failed to install the MCE in allotted time"
+                  
                   exit 1
               fi
           done
