--- a/tasks/task_verifyMigratedHostedCluster.yaml
+++ b/tasks/task_verifyMigratedHostedCluster.yaml
@@ -4,49 +4,52 @@ metadata:
   name: verify-migrated-hostedcluster
 spec:
   params:
-  - name: targetManagedCluster
-    default: local-cluster
-    description: The managedcluster to target to become a managementcluster
-  - name: hostedClusterName
-    default: 
-    description: The name of the hosted cluster to be verified
-    type: string
-  - name: infraID
-    default: 
-    description: The infraID of the hosted cluster to be verified
-    type: string
+    - name: targetManagedCluster
+      default: local-cluster
+      description: The managedcluster to target to become a managementcluster
+    - name: hostedClusterName
+      default:
+      description: The name of the hosted cluster to be verified
+      type: string
+    - name: infraID
+      default:
+      description: The infraID of the hosted cluster to be verified
+      type: string
   steps:
-  - args:
-    - |-
-      #!/bin/bash
-      set -e
+    - args:
+        - |-
+          #!/bin/bash
+          set -e
 
-      _LOGIN_CMD=$(cat login.sh)
-      eval "$_LOGIN_CMD"
+          ERROR_STATUS_MESSAGE="Hosted cluster was not migrated"
+          echo $ERROR_STATUS_MESSAGE > failureStatus.yaml
 
-      _ATTEMPTS=0
-      until oc get hc -n ocm-staging-$(inputs.params.infraID) $(inputs.params.hostedClusterName)  -o jsonpath='{.status.version.history[0].state}' | grep "Completed";
-      do 
-          echo "$_ATTEMPTS/20: Waiting for hosted cluster to be complete... Sleeping 1 min"
-          _ATTEMPTS=$((_ATTEMPTS + 1))
-          sleep 60;
-          if [[ $_ATTEMPTS == 20 ]]; then
-              echo "Hosted cluster did not come up in the allotted time"
-              oc get hc -n ocm-staging-$(inputs.params.infraID) $(inputs.params.hostedClusterName)  -o yaml
+          _LOGIN_CMD=$(cat login.sh)
+          eval "$_LOGIN_CMD"
 
-              exit 0
-          fi
-      done
+          _ATTEMPTS=0
+          until oc get hc -n ocm-staging-$(inputs.params.infraID) $(inputs.params.hostedClusterName)  -o jsonpath='{.status.version.history[0].state}' | grep "Completed";
+          do 
+              echo "$_ATTEMPTS/20: Waiting for hosted cluster to be complete... Sleeping 1 min"
+              _ATTEMPTS=$((_ATTEMPTS + 1))
+              sleep 60;
+              if [[ $_ATTEMPTS == 20 ]]; then
+                  echo "Hosted cluster did not come up in the allotted time"
+                  oc get hc -n ocm-staging-$(inputs.params.infraID) $(inputs.params.hostedClusterName)  -o yaml
 
-      echo "Hosted cluster $(inputs.params.hostedClusterName) is running"
+                  exit 0
+              fi
+          done
 
-      exit 0
-    command:
-    - /bin/bash
-    - -c
-    image: quay.io/zkayyali812/ocm-utils:latest
-    name: apply
-    resources: {}
-    workingDir: /workspace/source
+          echo "Hosted cluster $(inputs.params.hostedClusterName) is running"
+
+          exit 0
+      command:
+        - /bin/bash
+        - -c
+      image: quay.io/zkayyali812/ocm-utils:latest
+      name: apply
+      resources: {}
+      workingDir: /workspace/source
   workspaces:
-  - name: source
+    - name: source
