Change the way cluster are checked out
Signed-off-by: Omar Farag <ofarag@redhat.com>

--- a/.github/workflows/fetch_and_push_tag.yaml
+++ b/.github/workflows/fetch_and_push_tag.yaml
@@ -34,11 +34,15 @@ jobs:
             else
               echo "tag28 is empty, trying again"
             fi
+
+            suffix=$(cat /dev/urandom | env LC_ALL=C tr -dc 'a-z0-9' | fold -w 10 | head -n 1)
+            CLUSTER_CLAIM_NAME=hypershift-ci-cluster-$suffix
+            echo "CLUSTER_CLAIM_NAME=$CLUSTER_CLAIM_NAME" >> $GITHUB_ENV
           done
       - name: echo tag
         run: |
           echo "Using tags" ${{ env.tag27 }} "and" ${{ env.tag28 }} 
       - name: Push Tag
         run: >-
-          curl -v -H 'content-Type: application/json' -d '{"message": {"tag27": "${{env.tag27}}", "tag28": "${{env.tag28}}"} }' $EVENT_LISTENER_ROUTE
+          curl -v -H 'content-Type: application/json' -d '{"message": {"clusterClaimName": "${{env.CLUSTER_CLAIM_NAME}}", "tag27": "${{env.tag27}}", "tag28": "${{env.tag28}}"} }' $EVENT_LISTENER_ROUTE
         
