--- a/tasks/task_notifyStatus_ds.yaml
+++ b/tasks/task_notifyStatus_ds.yaml
@@ -26,7 +26,7 @@ spec:
           #!/bin/bash
           set -e
 
-          REASON=$(cat failureStatus.taml)
+          REASON=$(cat failureStatus.yaml)
 
           PR_LINK=https://console-openshift-console.apps.collective.aws.red-chesterfield.com/k8s/ns/hypershift-devel/tekton.dev~v1beta1~PipelineRun/$(inputs.params.pipelineRunID)
 
