--- a/.github/workflows/fetch_and_push_tag.yaml
+++ b/.github/workflows/fetch_and_push_tag.yaml
@@ -37,6 +37,7 @@ jobs:
 
             suffix=$(cat /dev/urandom | env LC_ALL=C tr -dc 'a-z0-9' | fold -w 10 | head -n 1)
             CLUSTER_CLAIM_NAME=hypershift-ci-cluster-$suffix
+            echo "Clusterclaim name is" $CLUSTER_CLAIM_NAME
             echo "CLUSTER_CLAIM_NAME=$CLUSTER_CLAIM_NAME" >> $GITHUB_ENV
           done
       - name: echo tag
