--- a/.github/workflows/fetch_and_push_tag.yaml
+++ b/.github/workflows/fetch_and_push_tag.yaml
@@ -35,8 +35,8 @@ jobs:
               echo "tag28 is empty, trying again"
             fi
 
-            suffix=$(cat /dev/urandom | env LC_ALL=C tr -dc 'a-z0-9' | fold -w 10 | head -n 1)
-            CLUSTER_CLAIM_NAME=hypershift-ci-cluster-$suffix
+            #suffix=$(cat /dev/urandom | env LC_ALL=C tr -dc 'a-z0-9' | fold -w 10 | head -n 1)
+            CLUSTER_CLAIM_NAME=hypershift-ci-cluster-
             echo "CLUSTER_CLAIM_NAME=$CLUSTER_CLAIM_NAME" >> $GITHUB_ENV
           done
       - name: echo tag
