--- a/.github/workflows/fetch_and_push_tag.yaml
+++ b/.github/workflows/fetch_and_push_tag.yaml
@@ -37,8 +37,7 @@ jobs:
           done
       - name: generate clusterclaim name
         run: |
-            suffix=$(cat /dev/urandom | env LC_ALL=C tr -dc 'a-z0-9' | fold -w 10 | head -n 1)
-            cluster_claim_name=hypershift-ci-cluster-$suffix
+            cluster_claim_name=hypershift-ci-cluster-${{ github.run_id }}-${{ github.run_attempt }}
             echo "cluster_claim_name=$cluster_claim_name" >> $GITHUB_ENV
       - name: echo tags and name
         run: |
