--- a/tasks/task_upgradeAcm.yaml
+++ b/tasks/task_upgradeAcm.yaml
@@ -21,7 +21,7 @@ spec:
         - |-
           #!/bin/bash
           set -e
-
+          {
           ERROR_STATUS_MESSAGE="Couldn't upgrade ACM"
           echo $ERROR_STATUS_MESSAGE > failureStatus.yaml
 
@@ -126,6 +126,7 @@ spec:
           echo "MultiClusterEngine is running"
 
           exit 0
+          } 2>&1 | tee task_logs/$(context.task.name).log
       command:
         - /bin/bash
         - -c
