--- a/tasks/task_notifyStatus_upgrade.yaml
+++ b/tasks/task_notifyStatus_upgrade.yaml
@@ -33,7 +33,7 @@ spec:
         - |-
           #!/bin/bash
           set -e
-
+          {
           REASON=$(cat failureStatus.yaml)
 
           PR_LINK=https://console-openshift-console.apps.collective.aws.red-chesterfield.com/k8s/ns/hypershift-devel/tekton.dev~v1beta1~PipelineRun/$(inputs.params.pipelineRunID)
@@ -66,7 +66,7 @@ spec:
           fi
 
           exit 0
-
+          } 2>&1 | tee task_logs/$(context.task.name).log
       command:
         - /bin/bash
         - -c
